# RAG

./: README.md  pyproject.toml  requirements.txt
data/csv/: test-set.csv
data/vector_store/c1f063ad-4753-4405-9a21-c60aeb6efa53/: index_metadata.pickle
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  emedding.py  search.py  tempCodeRunnerFile.py  vectorstore.py
